--- a/SmashNet/SmashNetTests/SmashNetTests.csproj
+++ b/SmashNet/SmashNetTests/SmashNetTests.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -56,6 +57,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Model\TournamentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmashClientTests.cs" />
   </ItemGroup>
