--- a/SmashNet/SmashNet/SmashNet.csproj
+++ b/SmashNet/SmashNet/SmashNet.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Model\Event.cs" />
     <Compile Include="Model\Games.cs" />
     <Compile Include="Model\Phase.cs" />
+    <Compile Include="Model\Set.cs" />
+    <Compile Include="Model\SetStates.cs" />
     <Compile Include="Model\Tournament.cs" />
     <Compile Include="SmashClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
